# vase2.0

./: .gitignore
Freecad/: Board.fcstd  BrainHolder.stl  BrainHolder2.stl  ConnectorMale.fcstd  LedHolder.fcstd  LedHolder.fcstd1  LedHolder.stl  LedHolder3.fcstd  LedHolder3_b.fcstd  LedHolder3_c.fcstd  LedHolder5_b.fcstd  LedHolder_1w.fcstd  LedHoledr_vaso13.FCStd  Supporto-B-Vaso13.FCStd  TubeMale.fcstd  board.3DS  board.mtl  board.x3d  undervase.FCStd  undervase.FCStd1  undervase2.FCStd  undervase2.FCStd1  vase2.FCStd  vaso-13.FCStd  vaso.fcstd  vaso.fcstd1  vaso2.fcstd  vaso2.fcstd1  vaso3.fcstd  vaso4.fcstd  vaso5.fcstd
Mobile/Vase2.0/: build.gradle
Mobile/Vase2.0/app/: build.gradle
Mobile/Vase2.0/app/src/main/: AndroidManifest.xml
Mobile/Vase2.0/gradle/wrapper/: gradle-wrapper.properties
android/: build.gradle  settings.gradle
android/app/: build.gradle  dataSample.json  google-services.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: sync.xml
android/app/src/main/res/menu/: main.xml
android/gradle/wrapper/: gradle-wrapper.properties
firmware/ESP8266/: .gitignore
firmware/ESP8266/VASO2/: CMakeLists.txt  sdkconfig
firmware/ESP8266/VASO2/main/: CMakeLists.txt  DataChunk.cpp  DataChunk.h  DataChunkFlash.cpp  DataChunkFlash.h  DataService.cpp  Flash.c  Flash.cpp  Flash.h  Light.c  Light.h  MCP3201.c  Pins.h  Settings.c  Settings.h  SoilService.c  SoilService.h  httpServer.c  main.c  partitions.csv  taskSNTP.c  taskSNTP.h  wifi.c  wifi.h
firmware/esp32/: CMakeLists.txt
firmware/esp32/main/: CMakeLists.txt  DataChunk.h  DataChunkFlash.cpp  DataSample.h  DataService.h  Flash.h  Light.h  MCP3201.c  MCP3201.h  Pins.h  httpServer.c  main.c  taskSNTP.h  wifi.c  wifipasswd.h
firmware/vas2-esp8266/main/: Pins.h  TimeKeeping.c  dht.c  dht.h  httpServer.c  httpServer.h  sntp.c  sntp.h  sntp_fun.c  taskDHT112.c  taskDHT112.h  taskSNTP.c  taskSNTP.h  wifi.c  wifi.h
firmware/vaso2/: .gitignore  CMakeLists.txt  CrossCompiler.cmake  Pins.h  WifiTask.c  WifiTask.h  mainUser.c  program.ld  taskDHT112.c  taskDHT112.h  taskDHT22.c  taskDHT22.h  taskSNTP.c  taskSNTP.h
firmware/vaso2/dht/: CMakeLists.txt
firmware/vaso2/libesphttpd/: CMakeLists.txt
firmware/vaso2/pwm/: CMakeLists.txt
firmware/vaso2/sntp/: CMakeLists.txt
firmware_2/vaso2/: CMakeLists.txt  sdkconfig
firmware_2/vaso2/main/: CMakeLists.txt  Flash.c  Flash.h  hello_world_main.c  httpServer.c  taskSNTP.c  taskSNTP.h  wifi.c
proteus/: .directory  .gitignore  3d.3DS  Backup Of vaso2.pdsbak  Backup Of vaso2_up.pdsbak  Last Loaded vaso2.pdsbak  Last Loaded vaso2_up.pdsbak  vaso2.pdsbad  vaso2.pdsprj  vaso2.pdsprj.DESKTOP-U0FDG0L.paolo.workspace  vaso2_up.pdsprj  vaso2_up.pdsprj.DESKTOP-U0FDG0L.paolo.workspace  vaso2_up_2V.pdsprj  vaso2_up_3V.pdsprj  vaso2_up_4V.pdsprj  vaso2_up_5V.pdsprj
proteus/Lib/: Backup Of LDO6AJSA.pdsbak  ESP32-WROVER.pdsprj  LDO6AJSA.pdsprj  LED1W.pdsprj  XC6206.pdsprj  esp32-cam.pdsprj  sot23-6.pdsprj
(+41 files in other folders)
